# fluent-examples

./: .clang-format  .gitignore  meson.build  premake5.lua
examples/: meson.build  premake5.lua
examples/00_minimal/: main.cpp
examples/01_hello_triangle/: main.cpp
examples/02_load_texture/: main.cpp
examples/03_compute/: main.cpp
examples/common/: entry_point.h  sample.hpp  ui_pass.c  ui_pass.h
examples/light/: main.c  main.frag.glsl  main.frag.h  main.vert.glsl  main.vert.h  main_pass.c  main_pass.h  pbr.frag.h  pbr.vert.h  shader_main_frag_spirv  shader_main_frag_spirv.c  shader_main_vert_spirv  shader_main_vert_spirv.c  ui_pass.c
examples/light/shaders/: brdf.comp.glsl  brdf.comp.h  compile_shaders.sh  eq_to_cubemap.comp.glsl  eq_to_cubemap.comp.h  gen_mipmap.comp.glsl  irradiance.comp.glsl  irradiance.comp.h  pbr.frag.glsl  pbr.vert.glsl  skybox.frag.glsl  skybox.frag.h  skybox.vert.glsl  skybox.vert.h  specular.comp.glsl  specular.comp.h
examples/render_graph/: main.c  main.frag.ft  main.frag.glsl  main.frag.h  main.vert.ft  main.vert.glsl  main.vert.h  main_pass.c  main_pass.h  shader_main_frag_spirv  shader_main_frag_spirv.c  shader_main_vert_spirv  shader_main_vert_spirv.c
examples/sandbox/: common.h  main.c  main.frag.ft  main.frag.h  main.vert.ft  main.vert.h
examples/shaders/01_hello_triangle/: main.frag.hlsl  main.vert.ft
examples/shaders/02_load_texture/: main.frag.hlsl  main.vert.hlsl
examples/shaders/03_compute/: main.comp.hlsl
examples/test_wsi/: main.frag.ft  test_wsi.c
sandbox/: editor.cpp  editor.hpp  editor.ini  main.c  main.cpp  main.frag.ft  main.frag.h  main.vert.ft  main.vert.h  meson.build  model.hpp  premake5.lua  render_graph.cpp  render_graph.hpp  test_wsi.c
sandbox/shaders/: deffered_shading.frag.ft  deffered_shading.vert.ft  gbuffer.frag.ft  gbuffer.vert.ft
subprojects/: .gitignore  fluent.wrap
tools/: compile_shaders.py  fluent.hlsl
